[tool.poetry]
name = "instagramz"
version = "0.1.0"
description = ""
authors = ["Ahmed Refaey <ahmed@refaey.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
instabot = "^0.117.0"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"
pre-commit = "^4.0.1"
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
notebook = "^7.2.2"
notebook-shim = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'False'
ensure_newline_before_comments = 'True'
line_length = 140
combine_as_imports = 'False'
lines_after_imports = 2